Fixed horizontal scrollbar due to animations on #education section

--- a/css/style.css
+++ b/css/style.css
@@ -436,6 +436,10 @@ section:last-of-type {
         height: 100%;
     }
 
+    #education {
+        overflow-x: hidden;
+    }
+
     #education .educationItem {
         margin-bottom: 25px;
     }
